--- a/Styles/Navbar.css
+++ b/Styles/Navbar.css
@@ -11,13 +11,12 @@ body{
     align-items: center;
     position: fixed;
     margin-top: -100px;
-    /* z-index: 10; */
+    z-index: 10;
     border-bottom:1px solid rgb(236, 236, 236) ;
     background-color: white;
-    /* border: 1px solid; */
 }
 #nav > div:nth-child(1){
-    width: 11%;
+    width: 12%;
     height: 90%;
     display: flex;
     justify-content: center;
@@ -28,7 +27,7 @@ body{
 #nav > div:nth-child(2){
     width: 55%;
     height: 70%;
-    margin-top: 1%;
+    margin-top: 2%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -45,13 +44,12 @@ body{
     align-items: center;
     border:1px solid rgb(236, 236, 236) ;
 }
-/* #nav > div:nth-child(1) > img{
-    width: 100%;
-    border: 1px solid green;
-} */
-/* a{
+#nav > div:nth-child(1) > img{
+    width: 90%;
+}
+a{
     text-decoration: none;
-} */
+}
 #nav > div:nth-child(2) > a{
     font-size: 12px;
     font-weight: 600;
@@ -126,8 +124,4 @@ body{
 #nav > div:nth-child(4)>a>span:hover{
     cursor: pointer;
     border-bottom: 3px solid #4296cb;
-}
-
-@media only screen and (max-width: 768px) {
-    
 }
